remove no longer needed overflow tag in body

--- a/src/assets/scss/pages/Jobs.scss
+++ b/src/assets/scss/pages/Jobs.scss
@@ -3,7 +3,7 @@
 
 .Jobs {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
